--- a/parcel-config-service.yml
+++ b/parcel-config-service.yml
@@ -3,7 +3,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql//localhost:3306/generaldb
+    url: jdbc:mysql://localhost:3306/generaldb
     username: root
     password: 
   jpa:
